[package]
name = "Token-Contracts"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = "22.0.8"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
